Upgrade to HAPI 8.0.0 and FHIR Core 6.5.15